feat: Add title to purchaser section

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -3,6 +3,8 @@ default-lang = "en"
 
 [lang.en]
 invoice = "Invoice"
+purchaser = "Recipient"
 
 [lang.fi]
 invoice = "Lasku"
+purchaser = "Vastaanottaja"
