--- a/src/translations.toml
+++ b/src/translations.toml
@@ -8,7 +8,9 @@ item = "Item"
 quantity = "Quantity"
 vat = "VAT"
 unit_price = "Unit Price"
+total = "Total"
 total_with_tax = "Total (incl. VAT)"
+seller = "Seller"
 
 [lang.fi]
 invoice = "Lasku"
@@ -19,3 +21,4 @@ vat = "ALV"
 unit_price = "Yksikköhinta"
 total = "Yhteensä"
 total_with_tax = "Yhteensä (sis. ALV)"
+seller = "Myyjä"
