--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
+ciborium = "0.2.2"
+serde = "1.0.219"
 wasm-minimal-protocol = "0.1.0"
 
 [profile.release]
