--- a/template/data.yaml
+++ b/template/data.yaml
@@ -6,6 +6,7 @@
 - description: Battery AA
   quantity: 2
   unit_price: 2
+  vat: 25.5
 
 - description: Newspaper
   quantity: 3
@@ -15,3 +16,4 @@
 - description: Phone
   quantity: 1
   unit_price: 10000
+  vat: 0
