refactor: Use string in unit_price

--- a/template/data.yaml
+++ b/template/data.yaml
@@ -1,6 +1,6 @@
 - description: Apple
   quantity: 10
-  unit_price: 2
+  unit_price: "2"
   vat_rate: "0.14"
 
 - description: Battery AA
@@ -10,10 +10,10 @@
 
 - description: Newspaper
   quantity: 3
-  unit_price: 10
+  unit_price: "10"
   vat_rate: "0.10"
 
 - description: Phone
   quantity: 1
-  unit_price: 10000
+  unit_price: "10000"
   vat: "0"
