--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,31 @@ jobs:
           author_email: github-ations[bot]@users.noreply.github.com
           message: "Format"
 
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Cache Rust dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install Just
+        uses: baptiste0928/cargo-install@v3
+        with:
+          crate: just
+
+      - name: Run tests
+        run: just test
+
   build:
     name: Build
     runs-on: ubuntu-latest
