--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,10 @@ jobs:
         uses: baptiste0928/cargo-install@v3
         with:
           crate: just
-        
+
+      - name: Install wasm32 target
+        run: rustup target add wasm32-unknown-unknown
+
       - name: Install Rust tools
         run: just install-dev-deps
 
@@ -50,6 +53,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install wasm32 target
+        run: rustup target add wasm32-unknown-unknown
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
