feat: Add VAT section
Refs: #6

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -11,6 +11,8 @@ unit_price = "Unit Price"
 total = "Total"
 total_with_tax = "Total (incl. VAT)"
 seller = "Seller"
+price_without_vat = "Price without VAT"
+price_with_vat = "Price with VAT"
 
 [lang.fi]
 invoice = "Lasku"
@@ -22,3 +24,5 @@ unit_price = "Yksikköhinta"
 total = "Yhteensä"
 total_with_tax = "Yhteensä (sis. ALV)"
 seller = "Myyjä"
+price_without_vat = "Veroton hinta"
+price_with_vat = "Verollinen hinta"
