--- a/template/data.yaml
+++ b/template/data.yaml
@@ -6,7 +6,7 @@
 - description: Battery AA
   quantity: 2
   unit_price: "2"
-  vat: "0.255"
+  vat_rate: "0.255"
 
 - description: Newspaper
   quantity: 3
@@ -16,4 +16,4 @@
 - description: Phone
   quantity: 1
   unit_price: "10000"
-  vat: "0"
+  vat_rate: "0"
