--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Cache Rust dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install Just
+        uses: baptiste0928/cargo-install@v3
+        with:
+          crate: just
+
+      - name: Build WASM plugin
+        run: just build
+
       - name: Setup Typst
         uses: typst-community/setup-typst@v4
 
