feat: Add basic payment info
Refs: #8

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -13,6 +13,11 @@ total_with_tax = "Total (incl. VAT)"
 seller = "Seller"
 price_without_vat = "Price without VAT"
 price_with_vat = "Price with VAT"
+due_date = "Due date"
+recipient = "Recipient"
+reference_number = "Reference number"
+to_pay = "To pay"
+bank = "Bank"
 
 [lang.fi]
 invoice = "Lasku"
@@ -26,3 +31,8 @@ total_with_tax = "Yhteensä (sis. ALV)"
 seller = "Myyjä"
 price_without_vat = "Veroton hinta"
 price_with_vat = "Verollinen hinta"
+due_date = "Eräpäivä"
+recipient = "Saaja"
+reference_number = "Viitenumero"
+to_pay = "Maksettava"
+bank = "Pankki"
