--- a/rust-tools/Cargo.toml
+++ b/rust-tools/Cargo.toml
@@ -12,6 +12,7 @@ ciborium = "0.2.2"
 itertools = "0.14.0"
 serde = "1.0.219"
 wasm-minimal-protocol = "0.1.0"
+iso_11649 = "0.1.2"
 
 [profile.release]
 lto = true
