--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,10 @@ jobs:
         uses: baptiste0928/cargo-install@v3
         with:
           crate: just
+      - name: Install Tytanic
+        uses: baptiste0928/cargo-install@v3
+        with:
+          crate: tytanic
 
       - name: Run tests
         run: just test
