fix(translation): Remove duplicate quotes

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -9,7 +9,7 @@ quantity = "Quantity"
 vat = "VAT"
 unit_price = "Unit Price"
 total = "Total"
-total_with_tax = "Total (incl. VAT)"
+total_with_tax = "Total incl. VAT"
 seller = "Seller"
 price_without_vat = "Price without VAT"
 price_with_vat = "Price with VAT"
@@ -27,7 +27,7 @@ quantity = "Määrä"
 vat = "ALV"
 unit_price = "Yksikköhinta"
 total = "Yhteensä"
-total_with_tax = "Yhteensä (sis. ALV)"
+total_with_tax = "Yhteensä sis. ALV"
 seller = "Myyjä"
 price_without_vat = "Veroton hinta"
 price_with_vat = "Verollinen hinta"
