--- a/rust-tools/Cargo.toml
+++ b/rust-tools/Cargo.toml
@@ -14,6 +14,7 @@ serde = "1.0.219"
 wasm-minimal-protocol = "0.1.0"
 iso_11649 = "0.1.2"
 iban = "0.2.0"
+bank-barcode = "0.1.0"
 
 [profile.release]
 lto = true
