fix(translation): Use "beneficiary" instead of "recipient"

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -14,7 +14,7 @@ seller = "Seller"
 price_without_vat = "Price without VAT"
 price_with_vat = "Price with VAT"
 due_date = "Due date"
-recipient = "Recipient"
+beneficiary = "Beneficiary"
 reference_number = "Reference number"
 to_pay = "To pay"
 bank = "Bank"
@@ -32,7 +32,7 @@ seller = "Myyjä"
 price_without_vat = "Veroton hinta"
 price_with_vat = "Verollinen hinta"
 due_date = "Eräpäivä"
-recipient = "Saaja"
+beneficiary = "Saaja"
 reference_number = "Viitenumero"
 to_pay = "Maksettava"
 bank = "Pankki"
