refactor: Use abbreviations

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -5,7 +5,7 @@ default-lang = "en"
 invoice = "Invoice"
 purchaser = "Recipient"
 item = "Item"
-quantity = "Quantity"
+quantity = "Qty"
 vat = "VAT"
 unit_price = "Unit Price"
 total = "Total"
@@ -25,7 +25,7 @@ purchaser = "Vastaanottaja"
 item = "Tuote"
 quantity = "Määrä"
 vat = "ALV"
-unit_price = "Yksikköhinta"
+unit_price = "à-hinta"
 total = "Yhteensä"
 total_with_tax = "Yhteensä sis. ALV"
 seller = "Myyjä"
