ci: Build before test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,9 @@ jobs:
         with:
           crate: tytanic
 
+      - name: Build
+        run: just build
+
       - name: Run tests
         run: just test
 
