--- a/src/translations.toml
+++ b/src/translations.toml
@@ -7,7 +7,7 @@ purchaser = "Recipient"
 item = "Item"
 quantity = "Qty"
 vat = "VAT"
-unit_price = "Unit Price"
+unit_price = "Unit price"
 total = "Total"
 total_with_tax = "Total incl. VAT"
 seller = "Seller"
