feat: Add Swedish translation
Refs: #14

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -36,3 +36,20 @@ beneficiary = "Saaja"
 reference_number = "Viitenumero"
 to_pay = "Maksettava"
 bank = "Pankki"
+
+[lang.sv]
+invoice = "Faktura"
+purchaser = "Köpare"
+item = "Produkt"
+quantity = "Antal"
+vat = "Moms"
+unit_price = "à-pris"
+total = "Total"
+total_with_tax = "Total inkl. moms"
+seller = "Säljare"
+price_without_vat = "Pris utan moms"
+price_with_vat = "Pris med moms"
+due_date = "Förfallodag"
+beneficiary = "Mottagare"
+reference_number = "Referensnummer"
+to_pay = "Att betala"
