--- a/src/translations.toml
+++ b/src/translations.toml
@@ -7,7 +7,7 @@ purchaser = "Recipient"
 item = "Item"
 quantity = "Qty"
 vat = "VAT"
-unit_price = "Unit price"
+unit_price_with_vat = "Unit price incl. VAT"
 total = "Total"
 total_with_tax = "Total incl. VAT"
 seller = "Seller"
@@ -24,7 +24,7 @@ purchaser = "Vastaanottaja"
 item = "Tuote"
 quantity = "Määrä"
 vat = "ALV"
-unit_price = "à-hinta"
+unit_price_with_vat = "Verollinen à-hinta"
 total = "Yhteensä"
 total_with_tax = "Yhteensä sis. ALV"
 seller = "Myyjä"
@@ -41,7 +41,7 @@ purchaser = "Köpare"
 item = "Produkt"
 quantity = "Antal"
 vat = "Moms"
-unit_price = "à-pris"
+unit_price_with_vat = "à-pris inkl. moms"
 total = "Total"
 total_with_tax = "Total inkl. moms"
 seller = "Säljare"
