feat: Show unit price without VAT

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -8,6 +8,7 @@ item = "Item"
 quantity = "Qty"
 vat = "VAT"
 unit_price_with_vat = "Unit price incl. VAT"
+unit_price_without_vat = "Unit price excl. VAT"
 total = "Total"
 total_with_tax = "Total incl. VAT"
 seller = "Seller"
@@ -25,6 +26,7 @@ item = "Tuote"
 quantity = "Määrä"
 vat = "ALV"
 unit_price_with_vat = "Verollinen à-hinta"
+unit_price_without_vat = "Veroton à-hinta"
 total = "Yhteensä"
 total_with_tax = "Yhteensä sis. ALV"
 seller = "Myyjä"
@@ -41,7 +43,8 @@ purchaser = "Köpare"
 item = "Produkt"
 quantity = "Antal"
 vat = "Moms"
-unit_price_with_vat = "à-pris inkl. moms"
+unit_price_with_vat = "à-pris med moms"
+unit_price_without_vat = "à-pris utan moms"
 total = "Total"
 total_with_tax = "Total inkl. moms"
 seller = "Säljare"
