refactor(translation): Use incl./excl. instead of with/without

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -11,8 +11,8 @@ unit_price_with_vat = "Unit price incl. VAT"
 unit_price_without_vat = "Unit price excl. VAT"
 total = "Total"
 seller = "Seller"
-price_without_vat = "Price without VAT"
-price_with_vat = "Price with VAT"
+price_without_vat = "Price excl. VAT"
+price_with_vat = "Price incl. VAT"
 due_date = "Due date"
 beneficiary = "Beneficiary"
 reference_number = "Reference number"
