--- a/typst.toml
+++ b/typst.toml
@@ -16,3 +16,11 @@ exclude = ["tests/**", ".vscode/**","rust_tools/target/**",".github/**"]
 path = "template"
 entrypoint = "template/main.typ"
 thumbnail = "docs/images/thumbnail.png"
+
+[tool.packager]
+paths = [
+    "src",
+    "template",
+    "docs",
+    "rust_tools/rust_tools.wasm",
+]
