--- a/typst.toml
+++ b/typst.toml
@@ -3,7 +3,7 @@ name = "laskutys"
 version = "1.0.0"
 entrypoint = "src/lib.typ"
 authors = ["Jiahao Li"]
-description = "A template for making invoices matching Finnish requirements (VH/3634/00.01.00/2023)."
+description = "Make invoices satisfying Finnish standards (VH/3634/00.01.00/2023) and with bank barcode and/or EPC QR code."
 repository = "https://github.com/TheJiahao/typst-finnish-invoice"
 keywords = ["invoice", "finnish", "banking", "accounting"]
 compiler = "0.13.1"
