--- a/typst.toml
+++ b/typst.toml
@@ -15,7 +15,7 @@ exclude = ["tests/**", ".vscode/**", "rust_tools/target/**", ".github/**"]
 [template]
 path = "template"
 entrypoint = "template/main.typ"
-thumbnail = "docs/images/thumbnail.png"
+thumbnail = "docs/images/thumbnail.webp"
 
 [tool.packager]
 paths = [
