--- a/template/data.yaml
+++ b/template/data.yaml
@@ -17,7 +17,7 @@
   quantity: 1
   unit_price: "1000"
 
-- description: Sijoituskulta, AVL 43 a §
+- description: "Sijoituskulta, AVL\_43\_a\_§"
   quantity: 3
   unit_price: "10"
   vat_rate: "0"
