--- a/typst.toml
+++ b/typst.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 entrypoint = "src/lib.typ"
 authors = ["Jiahao Li"]
 description = "Make invoices satisfying Finnish standards (VH/3634/00.01.00/2023) and with bank barcode and/or EPC QR code."
-repository = "https://github.com/TheJiahao/typst-finnish-invoice"
+repository = "https://github.com/TheJiahao/laskutys"
 keywords = ["invoice", "finnish", "banking", "accounting"]
 compiler = "0.13.1"
 license = "MIT"
