--- a/.github/workflows/setup-action/action.yml
+++ b/.github/workflows/setup-action/action.yml
@@ -5,13 +5,7 @@ runs:
   using: composite
   steps:
     - name: Cache Rust dependencies
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      uses: Swatinem/rust-cache@v2
 
     - name: Install Just
       uses: baptiste0928/cargo-install@v3
