refactor(data): Use kebab-case
Refs: typst/packages#2696

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -7,8 +7,8 @@ purchaser = "Recipient"
 item = "Item"
 quantity = "Qty"
 vat = "VAT"
-unit_price_with_vat = "Unit price incl. VAT"
-unit_price_without_vat = "Unit price excl. VAT"
+unit-price-with-vat = "Unit price incl. VAT"
+unit-price-without-vat = "Unit price excl. VAT"
 total = "Total"
 seller = "Seller"
 price_without_vat = "Price excl. VAT"
@@ -24,8 +24,8 @@ purchaser = "Vastaanottaja"
 item = "Tuote"
 quantity = "Määrä"
 vat = "ALV"
-unit_price_with_vat = "Verollinen à-hinta"
-unit_price_without_vat = "Veroton à-hinta"
+unit-price-with-vat = "Verollinen à-hinta"
+unit-price-without-vat = "Veroton à-hinta"
 total = "Yhteensä"
 seller = "Myyjä"
 price_without_vat = "Veroton hinta"
@@ -41,8 +41,8 @@ purchaser = "Köpare"
 item = "Produkt"
 quantity = "Antal"
 vat = "Moms"
-unit_price_with_vat = "à-pris med moms"
-unit_price_without_vat = "à-pris utan moms"
+unit-price-with-vat = "à-pris med moms"
+unit-price-without-vat = "à-pris utan moms"
 total = "Total"
 seller = "Säljare"
 price_without_vat = "Pris utan moms"
