refactor(payment-info): Use kebab-case
Refs: typst/packages#2696

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -13,10 +13,10 @@ total = "Total"
 seller = "Seller"
 price_without_vat = "Price excl. VAT"
 price_with_vat = "Price incl. VAT"
-due_date = "Due date"
+due-date = "Due date"
 beneficiary = "Beneficiary"
-reference_number = "Reference number"
-to_pay = "To pay"
+reference-number = "Reference number"
+to-pay = "To pay"
 
 [lang.fi]
 invoice = "Lasku"
@@ -30,10 +30,10 @@ total = "Yhteensä"
 seller = "Myyjä"
 price_without_vat = "Veroton hinta"
 price_with_vat = "Verollinen hinta"
-due_date = "Eräpäivä"
+due-date = "Eräpäivä"
 beneficiary = "Saaja"
-reference_number = "Viitenumero"
-to_pay = "Maksettavaa"
+reference-number = "Viitenumero"
+to-pay = "Maksettavaa"
 
 [lang.sv]
 invoice = "Faktura"
@@ -47,7 +47,7 @@ total = "Total"
 seller = "Säljare"
 price_without_vat = "Pris utan moms"
 price_with_vat = "Pris med moms"
-due_date = "Förfallodag"
+due-date = "Förfallodag"
 beneficiary = "Mottagare"
-reference_number = "Referensnummer"
-to_pay = "Att betala"
+reference-number = "Referensnummer"
+to-pay = "Att betala"
