refactor(item-list): Use kebab-case
Refs: typst/packages#2696

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -12,7 +12,7 @@ unit-price-without-vat = "Unit price excl. VAT"
 total = "Total"
 seller = "Seller"
 price_without_vat = "Price excl. VAT"
-price_with_vat = "Price incl. VAT"
+price-with-vat = "Price incl. VAT"
 due-date = "Due date"
 beneficiary = "Beneficiary"
 reference-number = "Reference number"
@@ -29,7 +29,7 @@ unit-price-without-vat = "Veroton à-hinta"
 total = "Yhteensä"
 seller = "Myyjä"
 price_without_vat = "Veroton hinta"
-price_with_vat = "Verollinen hinta"
+price-with-vat = "Verollinen hinta"
 due-date = "Eräpäivä"
 beneficiary = "Saaja"
 reference-number = "Viitenumero"
@@ -46,7 +46,7 @@ unit-price-without-vat = "à-pris utan moms"
 total = "Total"
 seller = "Säljare"
 price_without_vat = "Pris utan moms"
-price_with_vat = "Pris med moms"
+price-with-vat = "Pris med moms"
 due-date = "Förfallodag"
 beneficiary = "Mottagare"
 reference-number = "Referensnummer"
