refactor(vat-section): Use kebab-case
Refs: typst/packages#2696

--- a/src/translations.toml
+++ b/src/translations.toml
@@ -11,7 +11,7 @@ unit-price-with-vat = "Unit price incl. VAT"
 unit-price-without-vat = "Unit price excl. VAT"
 total = "Total"
 seller = "Seller"
-price_without_vat = "Price excl. VAT"
+price-without-vat = "Price excl. VAT"
 price-with-vat = "Price incl. VAT"
 due-date = "Due date"
 beneficiary = "Beneficiary"
@@ -28,7 +28,7 @@ unit-price-with-vat = "Verollinen à-hinta"
 unit-price-without-vat = "Veroton à-hinta"
 total = "Yhteensä"
 seller = "Myyjä"
-price_without_vat = "Veroton hinta"
+price-without-vat = "Veroton hinta"
 price-with-vat = "Verollinen hinta"
 due-date = "Eräpäivä"
 beneficiary = "Saaja"
@@ -45,7 +45,7 @@ unit-price-with-vat = "à-pris med moms"
 unit-price-without-vat = "à-pris utan moms"
 total = "Total"
 seller = "Säljare"
-price_without_vat = "Pris utan moms"
+price-without-vat = "Pris utan moms"
 price-with-vat = "Pris med moms"
 due-date = "Förfallodag"
 beneficiary = "Mottagare"
